<resources>
    <string name="app_name">Elfarma</string>
    <string name="title_home">Início</string>
    <string name="title_search">Busca</string>
    <string name="title_requests">Pedidos</string>
    <string name="store_details_closed">Fechado</string>
    <string name="merchant_list_item_scheduling_available">Agendar</string>
    <string name="store_list_header_title">Drogarias</string>
    <string name="home_tab_entrega">Entrega</string>
    <string name="home_tab_retirada">Retirada</string>
    <string name="wallet_image_description">Carteira</string>
    <string name="clear_filters">Limpar</string>
    <string name="clear_filters_content_description">Limpar filtros. botão</string>
    <string name="something_went_wrong">Tivemos um problema por aqui</string>
    <string name="common_connection_error_state_title">Parece que você está sem conexão</string>
    <string name="common_connection_error_state_description">Verifique sua internet e tente outra vez</string>
    <string name="error_fetching_data">Por favor, verifique sua conexão com a internet ou aguarde um momento e tente de novo</string>
    <string name="try_again">Tentar de novo</string>
    <string name="title_activity_delivery_address">Delivery Address</string>
    <string name="content_description_back">Voltar</string>
    <string name="onboarding_no_location">Onde você quer\nreceber seu pedido?</string>
    <string name="address_list_search_box_title">Endereço e número</string>
    <string name="logged_out_empty_state_title">Já tem um endereço salvo?</string>
    <string name="logged_out_empty_state_button">Entrar</string>
    <string name="content_description_share_restaurant_button">Compartilhar</string>
    <string name="address_list_more_options">Mais opções</string>
    <string name="address_list_title">Endereço de entrega</string>
    <string name="address_list_location_item_title">Usar localização atual</string>
    <string name="address_found_near">Próximo a %s</string>
    <string name="address_list_location_activate">Ativar localização</string>
    <string name="address_search_empty_state_title">Não encontramos esse endereço</string>
    <string name="address_search_empty_state_description">Verifique o que você digitou e tente de novo. Ou busque pelo mapa.</string>
    <string name="address_search_empty_state_button_text">Buscar pelo mapa</string>
    <string name="google_api_places">AIzaSyDPP77TacLxzftbDgVCAV6BUe6yUHUUKtw</string>
    <string name="title_activity_address_set">Map</string>
    <string name="new_address_tooltip_title">Você está aqui?</string>
    <string name="new_address_tooltip_description">Ajuste a localização</string>
    <string name="address_search_map_title">Arraste para localizar o endereço</string>
    <string name="keep_going">Continuar</string>
    <string name="new_address_confirmation_button_text">Confirmar localização</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAPp8VsNoke4QT9nRCdMVvQxcnkT74p5pk</string>
    <string name="new_address_reference_hint">Ponto de referência</string>
    <string name="state_hint">Estado</string>
    <string name="content_description_default_double_tap">Tocar duas vezes para ativar</string>
    <string name="city_hint">Cidade</string>
    <string name="neighborhood_hint">Bairro</string>
    <string name="new_address_street_hint">Rua</string>
    <string name="number_hint">Número</string>
    <string name="new_address_complement_hint">Complemento</string>
    <string name="new_address_complement_description">Apto / Bloco / Casa</string>
    <string name="fav_address_as_description">Favoritar como</string>
    <string name="new_address_save_address_button_description">Salvar endereço</string>
    <string name="cancel">Cancelar</string>
    <string name="exclude">Excluir</string>
    <string name="edit">Editar</string>
    <string name="content_description_close">Fechar</string>
    <string name="content_description_group_buying_store_button">Criar pedido em grupo</string>
    <string name="content_description_search_dishes_button">Buscar no cardápio</string>
    <string name="content_description_like_store_button">Favoritar restaurante</string>
    <string name="group_buying_banner_title">Pedidos com %1$s</string>
    <string name="dot">•</string>
    <string name="content_description_info_plus_detail">Mais informações.</string>
    <string name="content_description_group_buying_restaurant_button">Criar pedido em grupo</string>
    <string name="title_activity_splash">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="store_information">Informações</string>
    <string name="content_description_clear_input_field">Limpar campo</string>
    <string name="search_cancel">Cancelar</string>
    <string name="country">BR</string>
    <string name="language">pt</string>
    <string name="item_weight_price">Preço</string>
    <string name="item_weight">Peso estimado por item</string>
    <string name="product_observation_hint">Ex: Embalar separado.</string>
    <string name="product_observation_title">Alguma observação?</string>
    <string name="cart_button_add">Adicionar</string>
    <string name="product_details">Detalhes do item</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="checkout_title">Sacola</string>
    <string name="checkout_address_delivery_title">Entregar em</string>
    <string name="checkout_button_change">Trocar</string>
    <string name="payment_add_items">Adicionar mais itens</string>
    <string name="subtotal_label">Subtotal</string>
    <string name="payment_coupon">Cupom</string>
    <string name="payment_delivery_fee">Taxa de entrega</string>
    <string name="delivery_fee_info_content_description">Informações sobre taxa de entrega</string>
    <string name="payment_movilepay_balance">Saldo da carteira</string>
    <string name="payment_total">Total</string>
    <string name="payment_minimum_price">O pedido mínimo para este estabelecimento é de %s, não inclusa a taxa de entrega.</string>
    <string name="payment_authentication_title">Falta pouco!</string>
    <string name="payment_authentication_description">Para concluir o pedido, precisamos que você se identifique. Como quer continuar?</string>
    <string name="checkout_action_button_purchase">Fazer pedido</string>
    <string name="tag_free_delivery">Este item dá entrega grátis</string>
    <string name="checkout_payment_options">Formas de pagamento</string>
    <string name="card_validation_content_description">É necessário validar este cartão</string>
    <string name="checkout_payment_options_credit">Crédito</string>
    <string name="checkout_payment_options_debit">Débito</string>
    <string name="divider_simbol_store_item">•</string>
    <string name="km">km</string>
    <string name="filtros">Filtros</string>
    <string name="limpar">Limpar</string>
    <string name="ordenar_por">Ordenar por</string>
    <string name="oderna_o_padr_o">Ordenação padrão</string>
    <string name="localiza_o">Localização</string>
    <string name="tempo_de_entrega">Tempo de entrega</string>
    <string name="taxa_de_entrega">Taxa de entrega</string>
    <string name="ver_resultados">Ver Resultados</string>
    <string name="title_perfil">Perfil</string>
    <string name="horarios_de_entrega">Horários de entrega</string>
    <string name="tempo_medio_de_entrega">Tempo médio de entrega</string>
    <string name="cancelar">Cancelar</string>
    <string name="loja">Loja</string>
    <string name="hor_rio_de_funcionamento">horário de funcionamento</string>
    <string name="context_card_item_added_alert">Item adicionado à sua sacola</string>
    <string name="context_card_bag_title">Ver sacola</string>
    <string name="choice_pay">Escolher forma de pagamento</string>
    <string name="offline_payments_fragment_disclaimer">Para pagamento na entrega, o estabelecimento aceita as seguintes opções:</string>
    <string name="payment_list_empty_state_title">Opção indisponível</string>
    <string name="offline_payment_empty_state_subtitle">Essa loja não aceita pagamentos na entrega. Mas não se preocupe. Você pode pagar seu pedido pelo aplicativo.</string>
    <string name="payment_method_title">Formas de Pagamento</string>
    <string name="bag_payment_method_option">Formas de pagamento</string>
    <string name="bag_payment_change">Trocar</string>
    <string name="bag_payment_add">Adicionar</string>
    <string name="bag_confirm_order_change">Alterar</string>
    <string name="bag_confirm_order_go">Continuar</string>
    <string name="bag_confirm_dialog_title">Confirme a entrega</string>
    <string name="bag_confirm_order_dialog_title">Entregar em</string>
    <string name="bag_confirm_dialog_payment_method">Forma de pagamento</string>
    <string name="bag_confirm_dialog_button">Confirmar e fazer pedido</string>
    <string name="title_activity_splash2">FullscreenActivity</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="order_status_pending_title">Realizado</string>
    <string name="order_number">Número do pedido</string>
    <string name="order_number_contrac">Nº do pedido</string>
    <string name="confirm_cancel_subtitle">Pode levar alguns minutos</string>
    <string name="confirm_cancel">Confirmando cancelamento</string>
    <string name="takeout_confirm">Confirmar retirada do pedido</string>
    <string name="takeaway_confirm_park_arrival">Já estou na vaga</string>
    <string name="order_card_track_order_one">Acompanhe seu pedido</string>
    <string name="help_button">Ajuda</string>
    <string name="help_button_content_description">Ajuda. Botão</string>
    <string name="updated_real_time_title">Atualizado em\ntempo real</string>
    <string name="order_status_placed">Aguardando a confirmação do estabelecimento</string>
    <string name="order_loading_subtitle">Carregando as informações do pedido</string>
    <string name="see_more">Ver mais</string>
    <string name="chat">Chat</string>
    <string name="order_location">Local</string>
    <string name="box_description">Use o QR code ou digite os números abaixo para retirar seu pedido.</string>
    <string name="order_delivered_title">Seu pedido chegou?</string>
    <string name="trackout_view_route">Ver rota</string>
    <string name="order_delivered_subtitle">Confirme assim que receber o pedido e nos ajude a saber se deu tudo certo.</string>
    <string name="content_description_info">Mais informações sobre a entrega</string>
    <string name="confirm_delivery_button">Confirmar entrega</string>
    <string name="order_cancelled_title">Pedido cancelado</string>
    <string name="store_recommendation_title">Não fique com fome, veja restaurantes que são a sua cara:</string>
    <string name="redirect_to_order_details">Ver detalhes do pedido</string>
    <string name="order_rating_choose_stars">Escolha de 1 a 5 estrelas para classificar</string>
    <string name="order_qrcode_delivery_title">Pagamento por QR code</string>
    <string name="order_qrcode_delivery_confirmation_button">Pagar com QR code</string>
    <string name="money_change_dialog_step_one_title">Dinheiro</string>
    <string name="money_change_dialog_step_one_description">Você vai precisar de troco?</string>
    <string name="money_change_dialog_step_two_title">Troco pra quanto?</string>
    <string name="money_change_dialog_step_two_description">Seu pedido deu %1$s.\nDigite quanto vai pagar em dinheiro para\nque o entregador leve o seu troco.</string>
    <string name="money_change_dialog_step_two_input_hint">0,00</string>
    <string name="money_change_dialog_no_change">Não quero troco</string>
    <string name="money_change_dialog_step_two_confirm_button">Confirmar</string>
    <string name="no">Não</string>
    <string name="yes">Sim</string>
</resources>