<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="hashtag.alldelivery.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/home_fragment" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="hashtag.alldelivery.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/search_fragment" />

    <fragment
        android:id="@+id/navigation_orders"
        android:name="hashtag.alldelivery.ui.order.OrderHistoryFragment"
        android:label="@string/title_requests"
        tools:layout="@layout/order_history_fragment" />

    <fragment
        android:id="@+id/navigation_perfil"
        android:name="hashtag.alldelivery.ui.perfil.PerfilFragment"
        android:label="fragment_perfil"
        tools:layout="@layout/perfil_fragment" />
</navigation>