<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:gravity="center" android:orientation="vertical" android:tag="layout/waiting_empty_state_0" android:background="@color/white" android:paddingLeft="32dp" android:paddingTop="20dp" android:paddingRight="32dp" android:paddingBottom="10dp" android:layout_width="match_parent" android:layout_height="wrap_content">
    <ImageView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_common_error"/>

    <TextView android:gravity="center"
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/something_went_wrong"
        style="@style/TextAppearance.DesignSystem.Paragraph.P1"/>

    <TextView android:textColor="@color/deprecated_medium_grey"
        android:gravity="center_horizontal"
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/error_fetching_data"
        android:lineSpacingExtra="7dp"
        style="@style/TextAppearance.DesignSystem.Paragraph.P3"/>

    <TextView android:textColor="@color/clickable_text"
        android:id="@+id/try_again_button"
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/try_again"
        style="@style/TextAppearance.DesignSystem.Button.B1"/>

</LinearLayout>
