<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:aapt="http://schemas.android.com/aapt"
    android:id="@+id/container"
    android:padding="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView android:id="@+id/back_button"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/content_description_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back"
        app:tint="@color/colorPrimary"/>

    <TextView android:ellipsize="end"
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_card_track_order_one"
        android:maxLines="1"
        android:textAllCaps="true"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/back_button"
        app:layout_constraintRight_toLeftOf="@+id/help"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Text.Popup"/>

    <TextView android:textSize="13sp"
        android:textColor="@color/colorPrimary"
        android:id="@+id/help"
        android:padding="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help_button"
        android:contentDescription="@string/help_button_content_description"
        android:layout_marginEnd="7dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Text.Body2"/>

    <TextView android:ellipsize="end"
        android:gravity="center"
        android:id="@+id/badge"
        android:visibility="invisible"
        android:layout_width="13dp"
        android:layout_height="13dp"
        android:layout_marginTop="8dp"
        android:maxLines="1"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/BadgeGrey"/>

    <View android:id="@+id/divider"
        android:background="@color/deprecated_whisper"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
