<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:aapt="http://schemas.android.com/aapt"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        app:layout_constraintBottom_toBottomOf="@+id/barrier"/>

    <ImageView android:id="@+id/back_button"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="16dp"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/store_toolbar_height"
        android:tint="@color/white"
        android:contentDescription="@string/content_description_back"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back"/>

    <TextView android:textColor="@color/white"
        android:ellipsize="end"
        android:gravity="center"
        android:id="@+id/store_title"
        android:text=""
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:maxLines="1"
        android:alpha="0"
        android:textAllCaps="true"
        app:layout_constraintBottom_toTopOf="@+id/store_description"
        app:layout_constraintLeft_toRightOf="@+id/back_button"
        app:layout_constraintRight_toLeftOf="@+id/search_button"
        app:layout_constraintTop_toTopOf="@+id/back_button"
        app:layout_constraintVertical_chainStyle="packed"
        style="@style/Text.Page_Title"/>

    <TextView android:textColor="@color/deprecated_white_smoke_90"
        android:ellipsize="end"
        android:gravity="center"
        android:id="@+id/store_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:maxLines="1"
        android:alpha="0"
        app:layout_constraintBottom_toBottomOf="@+id/back_button"
        app:layout_constraintLeft_toRightOf="@+id/back_button"
        app:layout_constraintRight_toLeftOf="@+id/search_button"
        app:layout_constraintTop_toBottomOf="@+id/store_title"
        style="@style/Text.Description2"/>

    <ImageView android:id="@+id/share_button"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="10dp"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/store_toolbar_height"
        android:contentDescription="@string/content_description_share_restaurant_button"
        android:alpha="1"
        app:layout_constraintEnd_toStartOf="@+id/search_button"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_share"/>

    <ImageView android:id="@+id/group_button"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="10dp"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/store_toolbar_height"
        android:contentDescription="@string/content_description_group_buying_restaurant_button"
        android:alpha="1"
        app:layout_constraintEnd_toStartOf="@+id/search_button"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_create_social_group"/>

    <ImageView android:id="@+id/search_button"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/store_toolbar_height"
        android:layout_marginRight="4dp"
        android:contentDescription="@string/content_description_search_dishes_button"
        android:alpha="0"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_search_stroke"/>

    <ImageView android:id="@+id/favorite_button"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/store_toolbar_height"
        android:layout_marginRight="4dp"
        android:contentDescription="@string/content_description_like_store_button"
        android:alpha="0"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_favorite_empty_stroke"/>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="back_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>
